[package]
name = "myapp"
version = "0.1.0"
authors = ["E09591"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3.1"
actix-web = "3"
argonautica = "0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
tera = "1.5.0"